--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -46,5 +46,9 @@
         <footer class="grid grid-pad">
 
         </footer>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script type="text/javascript" src="/js/main.js"></script>
     </body>
 </html>
