NEW: Add as favion my gravatar.

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="/stylesheets/grid.css">
         <link rel="stylesheet" href="/stylesheets/style.css">
         <link href="/stylesheets/font-awesome.css" rel="stylesheet">
+        <link rel="shortcut icon" href="//gravatar.com/avatar/605c1ea6829031939550aa42a0ca89d2.jpg?s=15">
     </head>
     <body>
         <!--[if lt IE 7]>
