NEW: Add  a title on every pages.

--- a/app/views/500.html
+++ b/app/views/500.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+	500 - {{message}}
+{% endblock %}
 {% block content %}
     <div class="col-1-1">{{message}}</div>
 {% endblock %}
