--- a/app/views/article.html
+++ b/app/views/article.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+	{{title}}
+{% endblock %}
 {% block content %}
     <article class="col-1-1">{{article}}</article>
 {% endblock %}
