--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+	{{title}}
+{% endblock %}
 {% block content %}
     <ul class="col-1-1">
     	{% for article in articles %}
