--- a/app/views/list.html
+++ b/app/views/list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <ul class="col-1-1">
     	{% for article in articles %}
-    		<li><a href="/{{section|lower|replace(" ","-")}}/{{article.link}}">{{article.title|capitalize|replace("-"," ")}}</a> - {{article.date|prettyDate}}</li>
+    		<li><a href="/{{section|lower|replace(" ","-")}}/{{article.link|urlencode}}">{{article.title|capitalize|replace("-"," ")}}</a> - {{article.date|prettyDate}}</li>
     	{% endfor %}
     </ul>
 {% endblock %}
