NEW: Update to node v4.

--- a/app/views/article.html
+++ b/app/views/article.html
@@ -3,5 +3,5 @@
 	{{title}}
 {% endblock %}
 {% block content %}
-    <article class="col-1-1">{{article}}</article>
+    <article class="col-1-1">{{article | safe}}</article>
 {% endblock %}
